create ChangeLog; document release procedure

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,9 +1,10 @@
 include doc/*.rst
 include AUTHORS
+include ChangeLog
 include INSTALL
 include MANIFEST.in
-include TODO 
+include TODO
 include execfile.py
-include interpreter.py 
+include interpreter.py
 include tests.py
 include test_restricted.py
